# JustKeepLivin

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
docker/: compose.override.yaml  compose.yaml
docker/grafana/dashboards/: home.json
docs/: https:--docs.google.com-document-d-.txt
docs/schematics/: pi1.fzz
gpiohero/: README.md  main.py  pylock.toml  pyproject.toml  requirements.txt
gpiohero/gpiohero/: __init__.py
gpiohero/gpiohero/api/: __init__.py  _common.py  gpio.py
gpiohero/gpiohero/legit/: __init__.py  _gpiozero.py
gpiohero/gpiohero/mock/: _gpiozero.py
gpiohero/src/gpiohero/: __init__.py  common.py
gpiohero/src/gpiohero/legit/: 4d7s.py.scratch  __init__.py  _gpiozero.py  dht.py  ir.py  matrix.py  timer.py  zero.py
gpiohero/src/gpiohero/legit/gpio/: matrix.py
gpiohero/src/gpiohero/legit/imu/: __init__.py  mpu.py
gpiohero/src/gpiohero/legit/imu/mpu6050/: MPU6050.py  MPU6050_IRQ_example.py  MPU6050_cal.py  MPU6050_example.py  __init__.py  testMPU.py
gpiohero/src/gpiohero/legit/imu/simple_pid/: __init__.py
gpiohero/src/gpiohero/legit/lcd/: PCF8574.py  display.py
gpiohero/src/gpiohero/sim/: __init__.py  _gpiozero.py  dht.py  imu.py  ir.py  lcd.py  matrix.py  timer.py  zero.py
gpiohero/src/gpiohero/sim/gpio/: __init__.py  matrix.py
gpiohero/src/gpiohero/sim/gpio/zero/: __init__.py  _actuators.py  _sensors.py
pies/: pi0.py
pies/pi1/: config.json  config.py  main.py  pyproject.toml
pies/pi2/: config.json  config.py  main.py  pyproject.toml
pies/pi3/: config.json  config.py  main.py  pyproject.toml
src/instance/: config.py
src/justkeeplivin/: api.py  app.py  cli.py  lighting.py  routes.py  security.py  telemetry.py
src/justkeeplivin/api/: __init__.py
src/justkeeplivin/routes/: __init__.py  main.py
src/justkeeplivin/templates/: base.html  index.html
src/justkeeplivin/x/: __init__.py  influxdb2.py  mqtt.py  pi1.py
