[project]
name = "justkeeplivin"
version = "2026.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "flask-mqtt>=1.3.0",
    "influxdb-client>=1.50.0",
]

[tool.uv.workspace]
members = [
    "justkeeplivin",
    "gpiohero",
    "pies/*",
]

[tool.uv.sources]
gpiohero = { workspace = true }

[dependency-groups]
dev = [
    # "gpiohero",
    "ruff>=0.14.14",
]

[project.scripts]
jkl = "justkeeplivin.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# Source: https://chat.openai.com
# Focus on Python errors, runtime issues, type hints, and version compatibility
select = [
    "E9",    # Syntax errors & undefined names
    "F",     # Pyflakes runtime checks
    "B",     # Bugbear: potential bugs & version-sensitive issues
    "YTT",   # Type hints incompatible with target Python
    "UP",    # Pyupgrade: modern syntax checks (does NOT auto-fix unless you run --fix)
    "FURB",  # Refactors for better compatibility
    "ISC"    # Import system checks (cross-version import safety)
]

# Ignore style, docstrings, naming, formatting, and * import warnings
ignore = [
    "E",        # PEP8 style errors
    "W",        # Warnings
    "D",        # Docstring rules
    "N",        # Naming conventions
    "ANN",      # Type annotation style
    "COM",      # Comments formatting
    "Q",        # Quotes / string formatting
    "TID",      # Tidying rules
    "ARG",      # Function argument style
    "PL",       # Complexity / design issues
    "SIM",      # Similarity / refactor suggestions
    "RUF",      # Ruff-specific unrelated rules
    "F403",     # from * import
    "F405",      # undefined names from * import,
    "F401",     # unused import
]
